Code parity with other implementation